# Sitios-Historicos

./: README.md
code/admin/: .gitignore  README.md  app.py  pyproject.toml
code/admin/src/core/: database.py
code/admin/src/core/api/: auth_api_core.py  favoritos_api_core.py  me_reviews_api_core.py  resenias_api_core.py  sites_api_core.py
code/admin/src/core/auth/: __init__.py  permiso.py  rol.py  usuario.py
code/admin/src/core/estados_resenias/: __init__.py  aprobada.py  eliminada.py  estado_resenia.py  pendiente.py  rechazada.py
code/admin/src/core/flags/: __init__.py  feature_flag.py  feature_flag_usuario.py
code/admin/src/core/historial/: __init__.py  accion.py  historial_sitio.py
code/admin/src/core/localidad/: __init__.py  ciudad.py  provincia.py
code/admin/src/core/resenias/: __init__.py  estado_resenia.py  resenia.py  resenia_contexto.py
code/admin/src/core/services/: resenia_service.py
code/admin/src/core/sitios_historicos/: __init__.py  categoria.py  estado_conservacion.py  imagen.py  sitio_historico.py  tag.py
code/admin/src/core/sitios_repo/: repo_sitios_historicos.py  site_repository.py
code/admin/src/core/sitios_service/: sites_service.py
code/admin/src/core/utils/: fechas_utils.py  forms.py  hashing.py  pagination.py  resenias_utils.py  sitios_utils.py  storage_utils.py
code/admin/src/web/: __init__.py  config.py  storage.py
code/admin/src/web/controllers/: auth.py  feature_flags.py  resenias_controller.py  sites_controllers.py  tags_controller.py
code/admin/src/web/dtos/: historial_dto.py  site_dto.py
code/admin/src/web/handlers/: HttpError.py
code/admin/src/web/schemas/: auth.py  favorites.py  image.py  resenias.py  site.py
code/admin/src/web/templates/: base.html  bienvenida.html  (+9 more)
code/admin/static/: flash.css  style.css
code/admin/static/js/: crear_sitio.js  crear_sitio_imagenes.js  editar_sitio.js  editar_sitio_imagenes.js  image_gallery_helpers.js  resenias.js  sitios.js  validaciones_form.js
(+96 files in other folders)
